Bug 879162 - Adjust CSS to fix gap between menubar and tabs in autohide vs. permanent cases, r=dao
UltraBlame original commit: 7b92268387848e7f7da1fd4b8c4f6b6a1bd5a795

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -29,7 +29,8 @@
 
 
 
-#toolbar-menubar:not([inactive]) ~ #TabsToolbar {
+#toolbar-menubar:not([autohide="true"]) ~ #TabsToolbar,
+#toolbar-menubar[autohide="true"]:not([inactive]) ~ #TabsToolbar {
   margin-top: 3px;
 }
 
